--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.162.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.72.0",
     "three": "^0.163.0"
   },
   "devDependencies": {
